# back-end/routes/menuRoutes.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const router = express.Router();
+const auth = require('../middleware/auth');
+
+router.get('/', auth, (req, res) => {
+    res.render('menu');
+});
+
+module.exports = router; 
